# zeno-plugin

./: .gitignore  README.md  USD_DEDUP_VALIDATION.md  pyproject.toml
.github/workflows/: ci.yml
.venv-ui/: pyvenv.cfg
blender/: README.md  __init__.py  canonicalize.py
blender/chimera_zeno/: __init__.py  action_ops.py  blender_qt.py  bridge.py  diagnostics_op.py  hub_bridge.py  launch_context.py  palette.py  (+7 more)
blender_addon/: README.md
chimera_hub/: __init__.py  __main__.py  handlers.py  ipc_contract.py  runtime.py  server.py  ui_service.py
chimera_zeno_maya/: __init__.py  entry.py
houdini/: __init__.py
maya/: __init__.py  canonicalize.py
nuke/: __init__.py
scripts/: ma_dedup_benchmark.py
tests/: test_chimera_hub.py  test_chunking_forced_cuts.py  test_chunking_manifest_cache.py  test_dcc_blend.py  test_dcc_detect.py  test_dcc_registry_usd.py  test_dual_artifact_publish.py  test_maya_ma.py  test_maya_omni_integration.py  test_omni_manifest_v3.py  test_usd_canonicalize.py  test_usd_omni_roundtrip.py  test_zeno_client.py  test_zeno_client_cache.py  test_zeno_client_core.py  test_zeno_ui.py
usd/: __init__.py  canonicalize.py
zeno_client/: __init__.py  _hash.py  _http.py  cache.py  cache_exceptions.py  cache_index.py  cache_lock.py  chunking.py  client.py  dcc_registry.py  entropy_segment.py  exceptions.py  launch_context.py  manifest.py  omni_ingest.py  palette_catalog.py  publisher.py  usd_omni.py
zeno_thin/: __init__.py  client.py
zeno_ui/: __init__.py  action_dialogs.py  data_source.py  dcc_detect.py  qt_compat.py  qt_dialogs.py  qt_workers.py  stylesheet.py  theme.json  workflows.py
(+10 files in other folders)
