[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zeno-plugin"
version = "0.2.0"
description = "Zeno DCC plugins and shared client (Maya, Houdini, Nuke, Blender)"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "blake3>=1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest",
]
ui = [
  "qtpy>=2.4",
]
hub = [
  "qtpy>=2.4",
  "PySide6>=6.6",
]

[project.scripts]
chimera-hub = "chimera_hub.__main__:main"

[tool.setuptools.packages.find]
include = ["zeno_client*", "zeno_ui*", "chimera_zeno_maya*", "chimera_hub*", "zeno_thin*"]

[tool.setuptools.package-data]
zeno_ui = ["theme.json", "styles/*.qss"]
